force-app/main/default/objects/Value_Chain_Pricing__c/Value_Chain_Pricing__c.object-meta.xml
<CustomObject>
    <label>Value Chain Pricing</label>
    <nameField>
        <displayFormat>VCP-{00000}</displayFormat>
        <label>Value Chain Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Chain Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>