force-app/main/default/objects/Value_Chain_Pricing__c/fields/Capsules_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Capsules_per_Unit__c</fullName>
    <label>Capsules per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>