force-app/main/default/objects/Value_Chain_Pricing__c/fields/Direct_Customer_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Direct_Customer_Expenses__c</fullName>
    <formula>(Selling_Price_Unit__c *  Opportunity__r.Cash_Discount__c)+(Selling_Price_Unit__c *  Opportunity__r.Marketing_Discount__c)+(Selling_Price_Unit__c *  Opportunity__r.Volume_Discount__c)+ Opportunity__r.Logistic_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Customer Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>