force-app/main/default/objects/Value_Chain_Pricing__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Current_Product_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>