force-app/main/default/objects/Value_Chain_Pricing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>startsWith</operation>
            <value>VCP-</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Value Chain Pricings</relationshipLabel>
    <relationshipName>Current_Product_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>