force-app/main/default/objects/Value_Chain_Pricing__c/fields/Retail_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Selling_Price__c</fullName>
    <label>Retail Selling Price</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>