force-app/main/default/objects/Value_Chain_Pricing__c/fields/Selling_Price_Capsule__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price_Capsule__c</fullName>
    <formula>Selling_Price_Unit__c /  Capsules_per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Price/Capsule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>