force-app/main/default/objects/Value_Chain_Pricing__c/fields/Selling_price_NET_EXW__c.field-meta.xml
<CustomField>
    <fullName>Selling_price_NET_EXW__c</fullName>
    <formula>Selling_Price_Unit__c -  Direct_Customer_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling price NET (EXW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>