force-app/main/default/objects/Value_Chain_Pricing__c/fields/Selling_Price_Unit__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price_Unit__c</fullName>
    <formula>(((Retail_Selling_Price__c * (1-Opportunity__r.RSP_Promo__c))*(1- Opportunity__r.VAT__c))*(1- Opportunity__r.Retail_Margin__c ))-(1*Opportunity__r.Agent_Distributor_Margin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Price/Unit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>