force-app/main/default/objects/Value_Chain_Pricing__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleeve</fullName>
            </value>
            <value>
                <fullName>Master Carton</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>