force-app/main/default/objects/Value_Chain_Pricing__c/listViews/Filtered_Value_Chain_Pricing.listView-meta.xml
<ListView>
    <fullName>Filtered_Value_Chain_Pricing</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>$recordId</value>
    </filters>
    <label>Filtered Value Chain Pricing</label>
</ListView>